...
    }
    
    func showResults() {
        let message = makeResultsMessage()
        
        let viewModel = QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text: message,
            buttonText: "Сыграть ещё раз"
        )
        
        viewController?.show(quiz: viewModel)
    }
...
